---------------------------------------------------------------------------
CHANGELOG: curn

$Id$
---------------------------------------------------------------------------

Version 2.0 (...)

- Now requires Java 1.5.0 JDK/JRE.
- Various classes converted to use JDK 1.5 generics.
- MiniRSSParser now handles (and ignores) empty <link> elements in
  RSS version 0.92, RSS version 2.0, and Atom XML files.


Version 1.5.7 (09 February, 2005)

- Substitution expressions (e.g., in the PreparseEdit or EditItemURL
  configuration items) now properly properly handle substitutions of the empty
  string. Strings like this were previously rejected as syntactically
  incorrect:

      s/foo//

  They are now permitted and processed properly.

- build.xml no longer hard-codes jikes compiler. To use jikes, either
  pass 

      -Dbuild.compiler=jikes 

  to ant, or put that option in ANT_OPTS in your personal ant startup file
  ($HOME/.antrc on Unix, or %HOME%\antrc_pre.bat on Windows).

- build.xml corrected so it no longer unconditionally recompiles everything.

- Serializable classes now provide their own serialVersionUID variable, per
  recommendations in the JDK 1.5 java.io.Serializable docs and in jikes
  1.22 warnings.


Version 1.5.6 (02 December, 2004)

- Added new MaxSummarySize configuration parameter. If a summary exceeds
  the specified size, it is truncated. See the User's Guide and the sample
  configuration file for details.

- Abstract org.clapper.curn.parser.RSSItem class now contains a
  getSummaryForDisplay() utility method, which handles stripping HTML tags,
  optionally using the description if the summary is not defined,
  and applying the MaxSummarySize constraint (if applicable). Modified
  existing output handlers to use this new method.


Version 1.5.5 (10 November, 2004)

- NOTE: You MUST have version 1.1.4 (or better) of the org.clapper.util
  library, or this version of curn WILL NOT WORK!
