@@ -95,7 +95,7 @@ def processChannels():
             feed_info = channel_wrapper.getFeedInfo()
             process_channel (out, channel, feed_info, indentation)
 
-        mimeTypeBuf.append ("text/plain")
+        mimeTypeOut.print ("text/plain")
 
         # Output a footer
 
@@ -170,7 +170,7 @@ def indent (out, indentation):
 
 channels    = bsf.lookupBean ("channels")
 outputPath  = bsf.lookupBean ("outputPath")
-mimeTypeBuf = bsf.lookupBean ("mimeType")
+mimeTypeOut = bsf.lookupBean ("mimeType")
 config      = bsf.lookupBean ("config")
 sectionName = bsf.lookupBean ("configSection")
 logger      = bsf.lookupBean ("logger");
