@@ -7,9 +7,16 @@ $Id$
 Version 2.0 (...)
 
 - Now requires Java 1.5.0 JDK/JRE.
+
 - Various classes converted to use JDK 1.5 generics.
+
 - MiniRSSParser now handles (and ignores) empty <link> elements in
   RSS version 0.92, RSS version 2.0, and Atom XML files.
+
+- The "mimeType" object that the ScriptOutputHandler class publishes via
+  the Bean Scripting Framework is now a java.io.StringWriter, instead of a
+  java.io.StringBuffer. Use of a StringBuffer causes exceptions with BSF
+  and the 1.5.0 JDK.
 
 
 Version 1.5.7 (09 February, 2005)
